src/test/deca/context/invalid/Objet/MethodCall-DownCast.deca
// Description:
//      Casting down and trying to call method
//
// Results:
//      (RULE 0.1) variable has not been declared
//
// History:
//      created on 17/1/2022

class A {
    protected int x;
    void foo() {
    }
}

class B extends A{
    boolean y;
    void fooB() {

    }
}

{
    A a = new A();
    A b = (B) (a);
    b.fooB();
}
